Updating links from projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,17 +54,17 @@
 
 
                     <div class="thumbnail text-center">
-                        <img class="img-fluid img-box" src=assets/images/placeholder_1.jpg alt="Abstract Image">
-                        <div class="caption">
-                            <p>Pig</p>
-                        </div>
+                        <img class="img-fluid img-box" src=assets/images/crystals6.jpg alt="Abstract Image">
+                        <a href='https://cmoneil.github.io/week-4-game/index.html' class="caption">
+                            <p>Crystals Game</p>
+                        </a>
                     </div>
 
                     <div class="thumbnail text-center">
-                        <img class="img-fluid img-box" src=assets/images/placeholder_2.jpg alt="Cool People">
-                        <div class="caption">
-                            <p>Fashion Show</p>
-                        </div>
+                        <img class="mg-fluid img-box" src=assets/images/90s_pic.jpg alt="Hangman Game">
+                        <a href= 'https://cmoneil.github.io/Hangman-Game/index.html' class="caption">
+                            <p>Hangman Game</p>
+                        </a>
                     </div>
 
                     <div class="thumbnail text-center">
