Added link for Trivia Game

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,23 +54,25 @@
 
 
                     <div class="thumbnail text-center">
-                        <img class="img-fluid img-box" src=assets/images/crystals6.jpg alt="Abstract Image">
+                        <img class="img-fluid img-box" src=assets/images/crystals6.jpg alt="Crystal Game">
                         <a href='https://cmoneil.github.io/week-4-game/index.html' class="caption">
                             <p>Crystals Game</p>
                         </a>
                     </div>
 
                     <div class="thumbnail text-center">
-                        <img class="mg-fluid img-box" src=assets/images/90s_pic.jpg alt="Hangman Game">
+                        <img class="img-fluid img-box" src=assets/images/90s_pic.jpg alt="Hangman Game">
                         <a href= 'https://cmoneil.github.io/Hangman-Game/index.html' class="caption">
                             <p>Hangman Game</p>
                         </a>
                     </div>
 
                     <div class="thumbnail text-center">
-                        <img class="img-fluid img-box" src=assets/images/placeholder_3.jpg alt="NYC">
+                        <img class="img-fluid img-box" src=assets/images/triviaBackground.jpg alt="TrivaGame">
                         <div class="caption">
-                            <p class="img-box">Subway</p>
+                            <a href = 'https://cmoneil.github.io/TriviaGame/index.html' class="caption">
+                            <p class="img-box">Trivia Game</p>
+                            </a>
                         </div>
                     </div>
 
