Added links for social sites and new hangman picture.'

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,8 +61,8 @@
                     </div>
 
                     <div class="thumbnail text-center">
-                        <img class="img-fluid img-box" src=assets/images/90s_pic.jpg alt="Hangman Game">
-                        <a href= 'https://cmoneil.github.io/Hangman-Game/index.html' class="caption">
+                        <img class="img-fluid img-box" src=assets/images/friendsPic.jpg alt="Hangman Game">
+                        <a href='https://cmoneil.github.io/Hangman-Game/index.html' class="caption">
                             <p>Hangman Game</p>
                         </a>
                     </div>
@@ -70,8 +70,8 @@
                     <div class="thumbnail text-center">
                         <img class="img-fluid img-box" src=assets/images/triviaBackground.jpg alt="TrivaGame">
                         <div class="caption">
-                            <a href = 'https://cmoneil.github.io/TriviaGame/index.html' class="caption">
-                            <p class="img-box">Trivia Game</p>
+                            <a href='https://cmoneil.github.io/TriviaGame/index.html' class="caption">
+                                <p class="img-box">Trivia Game</p>
                             </a>
                         </div>
                     </div>
@@ -103,10 +103,12 @@
                     <div class="page-name">
                         <h3>Connect with Me</h3>
                     </div>
-
-                    <i class="fa fa-github-square" style="font-size:70px;"></i>
-                    <i class="fa fa-linkedin-square" style="font-size:70px;color:#007BB6;"></i>
-                    <i class="fa fa-stack-overflow" style="font-size:70px;color: orange;"></i>
+                    <a href = "https://github.com/cmoneil" alt="Github Repository" class = "github">
+                    <i class="fa fa-github-square" style="font-size:70px;"></i></a>
+                    <a href = "https://www.linkedin.com/in/conor-oneil-597bb9133" alt="LinkedIn Page" class = "linkedIn">
+                    <i class="fa fa-linkedin-square" style="font-size:70px;color:#007BB6;"></i></a>
+                    <a href = "https://stackexchange.com/users/12829429/cmoneil" alt="Stack Overflow Page" class = "stackOverFlow">
+                    <i class="fa fa-stack-overflow" style="font-size:70px;color: orange;"></i></a>
 
                 </section>
 
