All social links working.

--- a/contact.html
+++ b/contact.html
@@ -78,10 +78,16 @@
                     <div class="page-name">
                         <h3>Connect with Me</h3>
                     </div>
+                    <a href="https://github.com/cmoneil" alt="Github Repository" class="github">
+                        <i class="fa fa-github-square"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/conor-oneil-597bb9133" alt="LinkedIn Page" class="linkedIn">
+                        <i class="fa fa-linkedin-square"></i>
+                    </a>
+                    <a href="https://stackexchange.com/users/12829429/cmoneil" alt="Stack Overflow Page" class="stackOverFlow">
+                        <i class="fa fa-stack-overflow"></i>
+                    </a>
 
-                    <i class="fa fa-github-square" style="font-size:70px;"></i>
-                    <i class="fa fa-linkedin-square" style="font-size:70px;color:#007BB6;"></i>
-                    <i class="fa fa-stack-overflow" style="font-size:70px;color: orange;"></i>
                 </section>
 
             </div>
