--- a/index.html
+++ b/index.html
@@ -53,31 +53,31 @@
 
                     <img src="assets/images/bio_img2.jpg" class="img-fluid img-box" alt="Me in Portovenere">
                     <div class="about">
-                    <p>I grew up and have lived in the Midwest my whole life. I guess Minnesotans don't really consider themselves
-                        Midwesterners but everyone in Minnesota thinks I'm from the south because I lived in Kansas. Kansas
-                        is not in the south. Its right in the middle of the country. Though anytime I go back to visit there,
-                        I seem to pick up a "southern accent". Its not an Alabama southern accent but its definitely not
-                        a Minnesota accent. I have now lived in Minnesota longer than anywhere else so I guess I am now more
-                        Minnesotan than anything.</p>
+                        <p>I grew up and have lived in the Midwest my whole life. I guess Minnesotans don't really consider
+                            themselves Midwesterners but everyone in Minnesota thinks I'm from the south because I lived
+                            in Kansas. Kansas is not in the south. Its right in the middle of the country. Though anytime
+                            I go back to visit there, I seem to pick up a "southern accent". Its not an Alabama southern
+                            accent but its definitely not a Minnesota accent. I have now lived in Minnesota longer than anywhere
+                            else so I guess I am now more Minnesotan than anything.</p>
 
 
 
-                    <p>The picture to the left was taken in Portovenere, Italy. It's right on the coast of Italy and is just
-                        to the south of Cinque Terre. My wife and I went there and the end of our honeymoon in the summer
-                        of 2017. We did a whirlwind European honeymoon. It was 2 weeks but we managed to go to 6 different
-                        cities so it was long but we crammed in a lot of Europe. It was definitely the best trip of my life.
-                        I have had some really good trips before but this was my first as a husband and it made it that much
-                        better.
-                    </p>
+                        <p>The picture to the left was taken in Portovenere, Italy. It's right on the coast of Italy and is
+                            just to the south of Cinque Terre. My wife and I went there and the end of our honeymoon in the
+                            summer of 2017. We did a whirlwind European honeymoon. It was 2 weeks but we managed to go to
+                            6 different cities so it was long but we crammed in a lot of Europe. It was definitely the best
+                            trip of my life. I have had some really good trips before but this was my first as a husband
+                            and it made it that much better.
+                        </p>
 
 
 
-                    <p>I attended the University of Kansas and graduated with a bachelor's degree in psychology. I have worked
-                        in advertising, banking, retail, and printing since graduation, but nothing directly related to my
-                        degree. I still follow everything KU related even the football team even if they may be the worst
-                        D1 football in the country. You would think that a school that has one of the best basketball programs
-                        in the country could at least field a decent football team.
-                    </p>
+                        <p>I attended the University of Kansas and graduated with a bachelor's degree in psychology. I have
+                            worked in advertising, banking, retail, and printing since graduation, but nothing directly related
+                            to my degree. I still follow everything KU related even the football team even if they may be
+                            the worst D1 football in the country. You would think that a school that has one of the best
+                            basketball programs in the country could at least field a decent football team.
+                        </p>
                     </div>
 
                 </section>
@@ -92,10 +92,16 @@
                     <div class="page-name">
                         <h3>Connect with Me</h3>
                     </div>
+                    <a href="https://github.com/cmoneil" alt="Github Repository" class="github">
+                        <i class="fa fa-github-square" style="font-size:70px;"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/conor-oneil-597bb9133" alt="LinkedIn Page" class="linkedIn">
+                        <i class="fa fa-linkedin-square" style="font-size:70px;color:#007BB6;"></i>
+                    </a>
+                    <a href="https://stackexchange.com/users/12829429/cmoneil" alt="Stack Overflow Page" class="stackOverFlow">
+                        <i class="fa fa-stack-overflow" style="font-size:70px;color: orange;"></i>
+                    </a>
 
-                    <i class="fa fa-github-square" style="font-size:70px;"></i>
-                    <i class="fa fa-linkedin-square" style="font-size:70px;color:#007BB6;"></i>
-                    <i class="fa fa-stack-overflow" style="font-size:70px;color: orange;"></i>
                 </section>
 
             </div>
