--- a/portfolio.html
+++ b/portfolio.html
@@ -99,16 +99,20 @@
 
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                 <section>
-
+                    <div class="container"></div>
                     <div class="page-name">
                         <h3>Connect with Me</h3>
                     </div>
-                    <a href = "https://github.com/cmoneil" alt="Github Repository" class = "github">
-                    <i class="fa fa-github-square" style="font-size:70px;"></i></a>
-                    <a href = "https://www.linkedin.com/in/conor-oneil-597bb9133" alt="LinkedIn Page" class = "linkedIn">
-                    <i class="fa fa-linkedin-square" style="font-size:70px;color:#007BB6;"></i></a>
-                    <a href = "https://stackexchange.com/users/12829429/cmoneil" alt="Stack Overflow Page" class = "stackOverFlow">
-                    <i class="fa fa-stack-overflow" style="font-size:70px;color: orange;"></i></a>
+                    <a href="https://github.com/cmoneil" alt="Github Repository" class="github">
+                        <i class="fa fa-github-square"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/conor-oneil-597bb9133" alt="LinkedIn Page" class="linkedIn">
+                        <i class="fa fa-linkedin-square"></i>
+                    </a>
+                    <a href="https://stackexchange.com/users/12829429/cmoneil" alt="Stack Overflow Page" class="stackOverFlow">
+                        <i class="fa fa-stack-overflow"></i>
+                    </a>
+
 
                 </section>
 
