Added gif party

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
                     </div>
 
                     <div class="thumbnail text-center">
-                        <img class="img-fluid img-box" src=assets/images/triviaBackground.jpg alt="TrivaGame">
+                        <img class="img-fluid img-box" src=assets/images/triviaBackground.jpg alt="Trivia Game">
                         <div class="caption">
                             <a href='https://cmoneil.github.io/TriviaGame/index.html' class="caption">
                                 <p class="img-box">Trivia Game</p>
@@ -77,9 +77,11 @@
                     </div>
 
                     <div class="thumbnail text-center">
-                        <img class="img-fluid img-box" src=assets/images/placeholder_4.jpg alt="San Francisco">
+                        <img class="img-fluid img-box" src=assets/images/fireWorks.gif alt="Gif Party">
                         <div class="caption">
-                            <p>Concert</p>
+                                <a href='https://cmoneil.github.io/GifTastic/index.html' class="caption">
+                            <p>Gif Party</p>
+                            </a>
                         </div>
                     </div>
 
