Added link for train time

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,16 +79,18 @@
                     <div class="thumbnail text-center">
                         <img class="img-fluid img-box" src=assets/images/fireWorks.gif alt="Gif Party">
                         <div class="caption">
-                                <a href='https://cmoneil.github.io/GifTastic/index.html' class="caption">
-                            <p>Gif Party</p>
+                            <a href='https://cmoneil.github.io/GifTastic/index.html' class="caption">
+                                <p>Gif Party</p>
                             </a>
                         </div>
                     </div>
 
                     <div class="thumbnail text-center">
-                        <img class="img-fluid img-box" src=assets/images/placeholder_5.jpg alt="Ocean Rocks">
+                        <img class="img-fluid img-box" src=assets/images/duNord.jpg alt="Train Time">
                         <div class="caption">
-                            <p>Hamburger</p>
+                            <a href='https://cmoneil.github.io/TrainTime/index.html' class="caption">
+                                <p>Train Time</p>
+                            </a>
                         </div>
                     </div>
 
